templates/aa-namespace.yml
apiVersion: v1
kind: Namespace
metadata:
  name: helm-nginx
  labels:
    name: helm-nginx
