templates/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: helm-nginx-ingress
  namespace: helm-nginx
spec:
  rules:
  - http:
      paths:
      - path: /*
        pathType: ImplementationSpecific
        backend:
          service:
            name: helm-nginx-service
            port:
              number: 80
